--- a/Resources/Storyboards/MainStoryboard.storyboard
+++ b/Resources/Storyboards/MainStoryboard.storyboard
@@ -1387,13 +1387,29 @@
                                     <constraint firstAttribute="trailing" secondItem="GyK-QW-5Sx" secondAttribute="trailing" constant="20" id="wqE-IG-mY0"/>
                                 </constraints>
                             </scrollView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="No6-Pd-9h3">
+                                <rect key="frame" x="269" y="20" width="31" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="31" id="INh-mW-3hD"/>
+                                    <constraint firstAttribute="height" constant="30" id="Rj8-tc-mgb"/>
+                                </constraints>
+                                <state key="normal" title="Vote">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="LkW-0m-hVh" kind="push" identifier="ShowVoteForm" id="f9I-Gk-qXG"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="CNp-Oc-Fc5" firstAttribute="top" secondItem="8Go-38-Vdm" secondAttribute="top" id="59i-R1-lLV"/>
+                            <constraint firstAttribute="trailing" secondItem="No6-Pd-9h3" secondAttribute="trailing" constant="20" id="DUY-t0-aSK"/>
                             <constraint firstItem="CNp-Oc-Fc5" firstAttribute="leading" secondItem="8Go-38-Vdm" secondAttribute="leading" id="P8t-nR-2IW"/>
                             <constraint firstItem="lpb-wk-5n7" firstAttribute="top" secondItem="CNp-Oc-Fc5" secondAttribute="bottom" id="dtV-kI-Nku"/>
                             <constraint firstAttribute="trailing" secondItem="CNp-Oc-Fc5" secondAttribute="trailing" id="jE9-ot-bWU"/>
+                            <constraint firstItem="No6-Pd-9h3" firstAttribute="top" secondItem="Z54-QM-oyj" secondAttribute="bottom" id="jd8-lR-77l"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="9E4-vB-2VC"/>
@@ -1403,11 +1419,102 @@
                         <outlet property="summaryLabel" destination="GyK-QW-5Sx" id="LZ1-d0-deL"/>
                         <outlet property="titleLabel" destination="Fjt-6q-3hC" id="Oxq-Y6-5wB"/>
                         <outlet property="trackLabel" destination="4va-qX-xFI" id="vAr-Xm-EYR"/>
+                        <outlet property="voteButton" destination="No6-Pd-9h3" id="xSt-Hg-Y1K"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="P62-HX-UqE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="12" y="4232"/>
+        </scene>
+        <!--Conference Vote View Controller-->
+        <scene sceneID="PIF-ht-MuG">
+            <objects>
+                <viewController id="LkW-0m-hVh" customClass="XBConferenceVoteViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Rvg-fR-tGn"/>
+                        <viewControllerLayoutGuide type="bottom" id="bKG-w9-bRO"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="wZI-ab-EMj">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2t8-2o-xlp">
+                                <rect key="frame" x="20" y="90" width="30" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="4ns-yA-xsc"/>
+                                    <constraint firstAttribute="width" constant="30" id="slg-xk-DWg"/>
+                                </constraints>
+                                <state key="normal" title="-">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="voteButton0Clicked:" destination="LkW-0m-hVh" eventType="touchUpInside" id="Z2K-W9-Uhr"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IpG-PP-rVS">
+                                <rect key="frame" x="145" y="90" width="30" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="0">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="voteButton1Clicked:" destination="LkW-0m-hVh" eventType="touchUpInside" id="yUT-5y-2Cs"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dyg-f8-67y">
+                                <rect key="frame" x="270" y="90" width="30" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="+">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="voteButton2Clicked:" destination="LkW-0m-hVh" eventType="touchUpInside" id="0Eb-45-Ckc"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mS0-8e-79c">
+                                <rect key="frame" x="20" y="31" width="280" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="inO-zq-2mW">
+                                <rect key="frame" x="20" y="61" width="280" height="16"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="2t8-2o-xlp" firstAttribute="leading" secondItem="wZI-ab-EMj" secondAttribute="leading" constant="20" id="4t9-Ci-kb9"/>
+                            <constraint firstItem="Dyg-f8-67y" firstAttribute="leading" secondItem="IpG-PP-rVS" secondAttribute="trailing" constant="95" id="55U-vj-UmU"/>
+                            <constraint firstItem="inO-zq-2mW" firstAttribute="leading" secondItem="wZI-ab-EMj" secondAttribute="leading" constant="20" id="Ak3-Nl-vPL"/>
+                            <constraint firstItem="Dyg-f8-67y" firstAttribute="top" secondItem="Rvg-fR-tGn" secondAttribute="bottom" constant="70" id="KFh-Ct-Uyx"/>
+                            <constraint firstAttribute="trailing" secondItem="inO-zq-2mW" secondAttribute="trailing" constant="20" id="Li4-g1-aav"/>
+                            <constraint firstItem="inO-zq-2mW" firstAttribute="top" secondItem="mS0-8e-79c" secondAttribute="bottom" constant="9" id="Ogr-yy-mfd"/>
+                            <constraint firstItem="IpG-PP-rVS" firstAttribute="leading" secondItem="2t8-2o-xlp" secondAttribute="trailing" constant="95" id="Q8R-YT-SE4"/>
+                            <constraint firstAttribute="trailing" secondItem="mS0-8e-79c" secondAttribute="trailing" constant="20" id="fnf-dD-BmR"/>
+                            <constraint firstAttribute="trailing" secondItem="Dyg-f8-67y" secondAttribute="trailing" constant="20" id="grY-4B-qCx"/>
+                            <constraint firstItem="mS0-8e-79c" firstAttribute="top" secondItem="Rvg-fR-tGn" secondAttribute="bottom" constant="11" id="hkw-mi-DaC"/>
+                            <constraint firstItem="IpG-PP-rVS" firstAttribute="top" secondItem="Rvg-fR-tGn" secondAttribute="bottom" constant="70" id="lzE-x1-uwL"/>
+                            <constraint firstItem="mS0-8e-79c" firstAttribute="leading" secondItem="wZI-ab-EMj" secondAttribute="leading" constant="20" id="tYl-cT-2aQ"/>
+                            <constraint firstItem="2t8-2o-xlp" firstAttribute="top" secondItem="Rvg-fR-tGn" secondAttribute="bottom" constant="70" id="ubD-If-zAc"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="gvk-QE-Dkf"/>
+                    <connections>
+                        <outlet property="subtitleLabel" destination="inO-zq-2mW" id="ll4-MU-DaZ"/>
+                        <outlet property="titleLabel" destination="mS0-8e-79c" id="kjN-p8-mCy"/>
+                        <outlet property="voteButton0" destination="2t8-2o-xlp" id="EB0-E9-w2W"/>
+                        <outlet property="voteButton1" destination="IpG-PP-rVS" id="bPW-bw-NtM"/>
+                        <outlet property="voteButton2" destination="Dyg-f8-67y" id="2CS-xo-eia"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jKv-fe-fZu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="488" y="4232"/>
         </scene>
         <!--Conference Track View Controller-->
         <scene sceneID="5wh-Cc-3Oy">
@@ -2070,6 +2177,6 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="ygM-6M-c9g"/>
+        <segue reference="8T2-Wu-dpR"/>
     </inferredMetricsTieBreakers>
 </document>
