--- a/Resources/Storyboards/MainStoryboard.storyboard
+++ b/Resources/Storyboards/MainStoryboard.storyboard
@@ -1112,6 +1112,7 @@
                         <segue destination="ut0-YE-hjt" kind="push" identifier="ShowRooms" id="h8d-E3-fcc"/>
                         <segue destination="CkC-20-mdW" kind="push" identifier="ShowTracks" id="uQ9-aF-93G"/>
                         <segue destination="XfO-fg-dRA" kind="push" identifier="ShowDay" id="AH2-ZS-Gjw"/>
+                        <segue destination="Rck-OC-pHQ" kind="push" identifier="ShowRatings" id="WbU-Yy-6VH"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ETK-u0-0Eg" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1243,6 +1244,38 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7HM-TM-dEA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1399" y="3356"/>
+        </scene>
+        <!--Conference Rating Table View Controller-->
+        <scene sceneID="nbS-Xo-fde">
+            <objects>
+                <tableViewController id="Rck-OC-pHQ" customClass="XBConferenceRatingTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="tJv-3d-3a1" customClass="XBTableView">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="pyr-L9-UZB">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pyr-L9-UZB" id="EZN-Um-Cx8">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Rck-OC-pHQ" id="3Ds-71-N2W"/>
+                            <outlet property="delegate" destination="Rck-OC-pHQ" id="b7q-nW-oSr"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="6mC-hi-ZUP"/>
+                    <connections>
+                        <segue destination="N7j-de-WDr" kind="push" identifier="ShowPresentationDetail" id="kgf-md-893"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hue-iJ-jb8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1399" y="5727"/>
         </scene>
         <!--Conference Room View Controller-->
         <scene sceneID="1AB-KK-eGX">
@@ -1426,10 +1459,10 @@
             </objects>
             <point key="canvasLocation" x="12" y="4232"/>
         </scene>
-        <!--Conference Vote View Controller-->
+        <!--Conference Rating View Controller-->
         <scene sceneID="PIF-ht-MuG">
             <objects>
-                <viewController id="LkW-0m-hVh" customClass="XBConferenceVoteViewController" sceneMemberID="viewController">
+                <viewController id="LkW-0m-hVh" customClass="XBConferenceRatingViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Rvg-fR-tGn"/>
                         <viewControllerLayoutGuide type="bottom" id="bKG-w9-bRO"/>
@@ -2177,6 +2210,6 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="8T2-Wu-dpR"/>
+        <segue reference="kgf-md-893"/>
     </inferredMetricsTieBreakers>
 </document>
