--- a/Classes/View/Conference Ratings/XBConferenceRatingCell.xib
+++ b/Classes/View/Conference Ratings/XBConferenceRatingCell.xib
@@ -7,24 +7,24 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="XBConferenceRoomCell" rowHeight="44" id="aCa-a0-1qD" customClass="XBConferenceRatingCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="XBConferenceRoomCell" rowHeight="44" id="aCa-a0-1qD" customClass="XBConferenceRatingCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aCa-a0-1qD" id="FWd-fx-AhH">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IQd-sq-UVE">
-                        <rect key="frame" x="270" y="11" width="30" height="21"/>
+                        <rect key="frame" x="237" y="15" width="30" height="14"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jVA-Ts-hyk">
-                        <rect key="frame" x="20" y="10" width="44" height="24"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="201" translatesAutoresizingMaskIntoConstraints="NO" id="jVA-Ts-hyk">
+                        <rect key="frame" x="20" y="8" width="201" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="17"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -32,10 +32,9 @@
                 <constraints>
                     <constraint firstItem="jVA-Ts-hyk" firstAttribute="leading" secondItem="FWd-fx-AhH" secondAttribute="leading" constant="20" id="0Vb-Wj-lV5"/>
                     <constraint firstAttribute="trailing" secondItem="IQd-sq-UVE" secondAttribute="trailing" constant="20" id="9K4-Ap-omg"/>
-                    <constraint firstAttribute="bottom" secondItem="IQd-sq-UVE" secondAttribute="bottom" constant="11" id="NYX-ha-49T"/>
-                    <constraint firstItem="jVA-Ts-hyk" firstAttribute="top" secondItem="FWd-fx-AhH" secondAttribute="top" constant="10" id="WHc-SN-RFz"/>
-                    <constraint firstAttribute="bottom" secondItem="jVA-Ts-hyk" secondAttribute="bottom" constant="9" id="YeA-Vn-DNo"/>
-                    <constraint firstItem="IQd-sq-UVE" firstAttribute="top" secondItem="FWd-fx-AhH" secondAttribute="top" constant="11" id="cqI-2r-tNT"/>
+                    <constraint firstAttribute="centerY" secondItem="IQd-sq-UVE" secondAttribute="centerY" id="GJL-gW-g8f"/>
+                    <constraint firstItem="jVA-Ts-hyk" firstAttribute="top" secondItem="FWd-fx-AhH" secondAttribute="top" constant="8" id="WHc-SN-RFz"/>
+                    <constraint firstAttribute="trailing" secondItem="jVA-Ts-hyk" secondAttribute="trailing" constant="66" id="ako-IU-gq0"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
